Fix z-index

--- a/app/assets/stylesheets/common/structure.scss
+++ b/app/assets/stylesheets/common/structure.scss
@@ -859,7 +859,7 @@ body {
 
       #session {
         position: relative;
-        z-index: 1000;
+        z-index: 10000;
         @include sign-in;
         //width: 385px;
         margin-top: 10px;
